# titans-pytorch

./: .gitignore  README.md  assert_flex.py  pyproject.toml  train.py  train_mac.py
tests/: test_titans.py
titans_pytorch/: __init__.py  associative_scan.py  mac_transformer.py  memory_models.py  neural_memory.py  titans.py  titans_attn_memory.py
