[project]
name = "titans-pytorch"
version = "0.0.44"
description = "Titans"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'neural memory module',
    'test time training',
    'linear attention'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "accelerated-scan>=0.2.0",
    "axial_positional_embedding>=0.3.5",
    "einx>=0.3.0",
    "einops>=0.8.0",
    "hyper-connections>=0.1.8",
    "Ninja",
    "rotary-embedding-torch",
    "tensordict",
    "torch>=2.2",
    "x-transformers"
]

[project.urls]
Homepage = "https://pypi.org/project/titans-pytorch/"
Repository = "https://github.com/lucidrains/titans-pytorch"

[project.optional-dependencies]

examples = [
    "tqdm",
    "wandb"
]

test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["titans_pytorch"]
